--- a/views/store/index.ejs
+++ b/views/store/index.ejs
@@ -26,7 +26,9 @@
     <p>Results: </p>
      <div class="row">
       <div class="large-12 columns">
+         <p id="result">
 
+         </p>
       </div>
     </div>
 
